fix for table overflowing

--- a/src/components/Story/Body.less
+++ b/src/components/Story/Body.less
@@ -115,6 +115,8 @@
   table {
     width: 100%;
     display: table;
+    border-collapse: collapse;
+    border-spacing: 0;
 
     tr > th {
       text-align: left;
